--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -67,5 +67,40 @@
                 </li>
             </ul>              
         </nav>
+        <section>
+            <h1>
+                Trackgenix SA
+            </h1>
+            <hr>
+            <h2>
+                What is Trackgenix
+            </h2>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
+                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
+                the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
+                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.
+            </p>
+            <img src="img/content-image-one.png">
+            <h2>
+                Our history
+            </h2>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
+                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
+                the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
+                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.
+            </p>
+            <button>
+                <a href="#">
+                    Learn more
+                </a>
+            </button>
+            <img src="img/content-image-two.png">
+        </section>
     </body>
 </html>
