--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -67,11 +67,13 @@
                 </li>
             </ul>              
         </nav>
-        <section>
+        <header>
             <h1>
                 Trackgenix SA
             </h1>
+        </header>
             <hr>
+        <section>
             <h2>
                 What is Trackgenix
             </h2>
