Making an unordered list item

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -103,6 +103,31 @@
                 </a>
             </button>
             <img src="img/content-image-two.png">
+            <h2>
+                Features
+            </h2>
+            <hr>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <ul>
+                <li>
+                    <b>Item 1:</b> lorem ipsum is simply dummy text of the printin
+                </li>
+                <li>
+                    <b>Item 2:</b> lorem ipsum is simply dummy text of the printin
+                </li>
+                <li>
+                    <b>Item 3:</b> lorem ipsum is simply dummy text of the printin
+                </li>
+                <li>
+                    <b>Item 4:</b> lorem ipsum is simply dummy text of the printin
+                </li>
+                <li>
+                    <b>Item 5:</b> lorem ipsum is simply dummy text of the printin
+                </li>
+            </ul>
         </section>
     </body>
 </html>
