--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -128,6 +128,46 @@
                     <b>Item 5:</b> lorem ipsum is simply dummy text of the printin
                 </li>
             </ul>
+            <h2>
+                WHY TRACKGENIX?
+            </h2>
+            <hr>
+            <img src="img/content-image-three.jpg">
+            <h3>
+                Subheader
+            </h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                dummy text ever since the 1500s.
+            </p>
+            <hr>
+            <img src="img/content-image-four.jpg">
+            <h3>
+                Subheader
+            </h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                dummy text ever since the 1500s.
+            </p>
+            <hr>
+            <img src="img/content-image-five.jpg">
+            <h3>
+                Subheader
+            </h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                dummy text ever since the 1500s.
+            </p>
+            <hr>
+            <img src="img/content-image-six.jpg">
+            <h3>
+                Subheader
+            </h3>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                dummy text ever since the 1500s.
+            </p>
+            <hr>
         </section>
     </body>
 </html>
