buttons added and new section of contact us

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -140,6 +140,11 @@
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s.
             </p>
+            <button>
+                <a href="#">
+                    Learn more
+                </a>
+            </button>
             <hr>
             <img src="img/content-image-four.jpg">
             <h3>
@@ -149,6 +154,11 @@
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s.
             </p>
+            <button>
+                <a href="#">
+                    Learn more
+                </a>
+            </button>
             <hr>
             <img src="img/content-image-five.jpg">
             <h3>
@@ -158,6 +168,11 @@
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s.
             </p>
+            <button>
+                <a href="#">
+                    Learn more
+                </a>
+            </button>
             <hr>
             <img src="img/content-image-six.jpg">
             <h3>
@@ -167,7 +182,22 @@
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s.
             </p>
+            <button>
+                <a href="#">
+                    Learn more
+                </a>
+            </button>
             <hr>
         </section>
+        <section id="contact-us">
+            <h2>
+                CONTACT US
+            </h2>
+            <hr>
+
+        </section>
+
+
+
     </body>
 </html>
