redirecting sidebar contact-us button to contact form

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#contact-us">
                         Contact Us
                     </a>
                 </li>
@@ -194,7 +194,21 @@
                 CONTACT US
             </h2>
             <hr>
-
+            <form>
+                <label>Name</label>
+                <input type="text" placeholder="Insert your name">
+                <label>E-mail</label>
+                <input type="text" placeholder="Insert your email">
+                <label>Contact area</label>
+                <select>
+                    <option>
+                        Option
+                    </option>
+                </select>
+                <textarea placeholder="write us a message..."></textarea>
+                <input type="submit" value="Send message">
+                <input type="button" value="Reset">
+            </form>
         </section>
 
 
