redirecting sidebar buttons to generic and homepage sections

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -30,12 +30,12 @@
             <hr>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="#homepage">
                         Homepage
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#generic">
                         Generic
                     </a>
                 </li>
@@ -73,7 +73,7 @@
             </h1>
         </header>
             <hr>
-        <section>
+        <section id="homepage">
             <h2>
                 What is Trackgenix
             </h2>
@@ -103,6 +103,8 @@
                 </a>
             </button>
             <img src="img/content-image-two.png">
+        </section>
+        <section id="features">
             <h2>
                 Features
             </h2>
@@ -113,21 +115,38 @@
             </p>
             <ul>
                 <li>
-                    <b>Item 1:</b> lorem ipsum is simply dummy text of the printin
+                    <b>
+                        Item 1:
+                    </b> 
+                        lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>Item 2:</b> lorem ipsum is simply dummy text of the printin
+                    <b>
+                        Item 2:
+                    </b> 
+                        lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>Item 3:</b> lorem ipsum is simply dummy text of the printin
+                    <b>
+                        Item 3:
+                    </b> 
+                        lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>Item 4:</b> lorem ipsum is simply dummy text of the printin
+                    <b>
+                        Item 4:
+                    </b> 
+                        lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>Item 5:</b> lorem ipsum is simply dummy text of the printin
+                    <b>
+                        Item 5:
+                    </b> 
+                        lorem ipsum is simply dummy text of the printin
                 </li>
             </ul>
+        </section>
+        <section id="generic">
             <h2>
                 WHY TRACKGENIX?
             </h2>
@@ -210,8 +229,11 @@
                 <input type="button" value="Reset">
             </form>
         </section>
+        <footer>
+            <h2>
+                TRACKGENIX
+            </h2>
 
-
-
+        </footer>
     </body>
 </html>
