I finished the footer, modified the header and made the readme

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -7,9 +7,15 @@
         <title>Trackgenix SA</title>
     </head>
     <body>
+        <header>
+            <h1>
+                Trackgenix SA
+            </h1>
+            <hr>
+        </header>
         <nav>
             <form>
-                <input type="text" placeholder="Search">
+                <input id= "search" type="text" placeholder="Search">
                 <button>
                     Search
                 </button>
@@ -51,28 +57,14 @@
             <hr>
             <ul>
                 <li>
-                    <a href="#">
                         mailinfo@trackgenix.com
-                    </a>
                 </li>
-                <li>
-                    <a href="#">
                         123-456789
-                    </a>
-                </li>
                 <li>
-                    <a href="#">
                         123 fake road #2000 Rosario, Argentina
-                    </a>
                 </li>
-            </ul>              
+            </ul>
         </nav>
-        <header>
-            <h1>
-                Trackgenix SA
-            </h1>
-        </header>
-            <hr>
         <section id="homepage">
             <h2>
                 What is Trackgenix
@@ -115,34 +107,24 @@
             </p>
             <ul>
                 <li>
-                    <b>
-                        Item 1:
-                    </b> 
-                        lorem ipsum is simply dummy text of the printin
+                    Item 1:
+                    lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>
-                        Item 2:
-                    </b> 
-                        lorem ipsum is simply dummy text of the printin
+                    Item 2:
+                    lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>
-                        Item 3:
-                    </b> 
-                        lorem ipsum is simply dummy text of the printin
+                    Item 3:
+                    lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>
-                        Item 4:
-                    </b> 
-                        lorem ipsum is simply dummy text of the printin
+                    Item 4: 
+                    lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    <b>
-                        Item 5:
-                    </b> 
-                        lorem ipsum is simply dummy text of the printin
+                    Item 5:
+                    lorem ipsum is simply dummy text of the printin
                 </li>
             </ul>
         </section>
@@ -215,16 +197,17 @@
             <hr>
             <form>
                 <label>Name</label>
-                <input type="text" placeholder="Insert your name">
+                <input id= "name" type="text" placeholder="Insert your name">
                 <label>E-mail</label>
-                <input type="text" placeholder="Insert your email">
+                <input id= "email" type="text" placeholder="Insert your email">
                 <label>Contact area</label>
-                <select>
+                <select id="option">
                     <option>
                         Option
                     </option>
                 </select>
-                <textarea placeholder="write us a message..."></textarea>
+                <textarea id="message" placeholder="write us a message...">
+                </textarea>
                 <input type="submit" value="Send message">
                 <input type="button" value="Reset">
             </form>
@@ -233,7 +216,106 @@
             <h2>
                 TRACKGENIX
             </h2>
-
+            <h4>
+                Products
+            </h4>
+            <ol>
+                <li>
+                    <a href="#features">
+                        Features
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Downloads
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Integrations
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Extras
+                    </a>
+                </li>
+            </ol>
+            <h4>
+                Company
+            </h4>
+            <ol>
+                <li>
+                    <a href="#homepage">
+                        About us
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Clients
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Resourses
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blog
+                    </a>
+                </li>
+            </ol>
+            <h4>
+                Support
+            </h4>
+            <ol>
+                <li>
+                    <a href="#">
+                        Help
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Tutorials
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        API
+                    </a>
+                </li>
+                <li>
+                    <a href="#contact-us">
+                        Contact
+                    </a>
+                </li>
+            </ol>
+            <button>
+                <a href="https://twitter.com/">
+                    <img src="img/twitter-footer.png">
+                </a>
+            </button>
+            <button>
+                <a href="https://www.linkedin.com/">
+                    <img src="img/linkedin-footer.png">
+                </a>    
+            </button>
+            <button>
+                <a href="https://github.com/">
+                    <img src="img/github-footer.png">
+                </a>
+            </button>
+            <button>
+                <a href="https://www.instagram.com/">
+                    <img src="img/instagram-footer.png">
+                </a>
+            </button>
+            <button>
+                <a href="https://www.facebook.com/">
+                    <img src="img/facebook-footer.png">
+                </a>
+            </button>
         </footer>
     </body>
 </html>
