changes after meeting with the team

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Trackgenix SA</title>
+        <title>
+            Trackgenix SA
+        </title>
     </head>
     <body>
         <header>
             <h1>
                 Trackgenix SA
             </h1>
-            <hr>
         </header>
         <nav>
             <form>
@@ -33,7 +34,6 @@
             <p>
                 MENU
             </p>
-            <hr>
             <ul>
                 <li>
                     <a href="#homepage">
@@ -54,7 +54,6 @@
             <p>
                 GET IN TOUCH
             </p>
-            <hr>
             <ul>
                 <li>
                         mailinfo@trackgenix.com
@@ -100,7 +99,6 @@
             <h2>
                 Features
             </h2>
-            <hr>
             <p>
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                 type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -132,7 +130,6 @@
             <h2>
                 WHY TRACKGENIX?
             </h2>
-            <hr>
             <img src="img/content-image-three.jpg">
             <h3>
                 Subheader
@@ -146,7 +143,6 @@
                     Learn more
                 </a>
             </button>
-            <hr>
             <img src="img/content-image-four.jpg">
             <h3>
                 Subheader
@@ -160,7 +156,6 @@
                     Learn more
                 </a>
             </button>
-            <hr>
             <img src="img/content-image-five.jpg">
             <h3>
                 Subheader
@@ -174,7 +169,6 @@
                     Learn more
                 </a>
             </button>
-            <hr>
             <img src="img/content-image-six.jpg">
             <h3>
                 Subheader
@@ -188,26 +182,29 @@
                     Learn more
                 </a>
             </button>
-            <hr>
         </section>
         <section id="contact-us">
             <h2>
                 CONTACT US
             </h2>
-            <hr>
             <form>
-                <label>Name</label>
+                <label>
+                    Name
+                </label>
                 <input id= "name" type="text" placeholder="Insert your name">
-                <label>E-mail</label>
+                <label>
+                    E-mail
+                </label>
                 <input id= "email" type="text" placeholder="Insert your email">
-                <label>Contact area</label>
+                <label>
+                    Contact area
+                </label>
                 <select id="option">
                     <option>
                         Option
                     </option>
                 </select>
-                <textarea id="message" placeholder="write us a message...">
-                </textarea>
+                <textarea id="message" placeholder="write us a message..."></textarea>
                 <input type="submit" value="Send message">
                 <input type="button" value="Reset">
             </form>
@@ -291,31 +288,33 @@
                     </a>
                 </li>
             </ol>
-            <button>
-                <a href="https://twitter.com/">
-                    <img src="img/twitter-footer.png">
-                </a>
-            </button>
-            <button>
-                <a href="https://www.linkedin.com/">
-                    <img src="img/linkedin-footer.png">
-                </a>    
-            </button>
-            <button>
-                <a href="https://github.com/">
-                    <img src="img/github-footer.png">
-                </a>
-            </button>
-            <button>
-                <a href="https://www.instagram.com/">
-                    <img src="img/instagram-footer.png">
-                </a>
-            </button>
-            <button>
-                <a href="https://www.facebook.com/">
-                    <img src="img/facebook-footer.png">
-                </a>
-            </button>
+            <div id="social-media">
+                <button>
+                    <a href="https://twitter.com/">
+                        <img src="img/twitter-footer.png">
+                    </a>
+                </button>
+                <button>
+                    <a href="https://www.linkedin.com/">
+                        <img src="img/linkedin-footer.png">
+                    </a>    
+                </button>
+                <button>
+                    <a href="https://github.com/">
+                        <img src="img/github-footer.png">
+                    </a>
+                </button>
+                <button>
+                    <a href="https://www.instagram.com/">
+                        <img src="img/instagram-footer.png">
+                    </a>
+                </button>
+                <button>
+                    <a href="https://www.facebook.com/">
+                        <img src="img/facebook-footer.png">
+                    </a>
+                </button>
+            </div>
         </footer>
     </body>
 </html>
