changes with the option and select labels

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -117,7 +117,7 @@
                     lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
-                    Item 4:
+                    Item 4: 
                     lorem ipsum is simply dummy text of the printin
                 </li>
                 <li>
@@ -143,6 +143,7 @@
                     Learn more
                 </a>
             </button>
+            <hr>
             <img src="img/content-image-four.jpg">
             <h3>
                 Subheader
@@ -156,6 +157,7 @@
                     Learn more
                 </a>
             </button>
+            <hr>
             <img src="img/content-image-five.jpg">
             <h3>
                 Subheader
@@ -169,6 +171,7 @@
                     Learn more
                 </a>
             </button>
+            <hr>
             <img src="img/content-image-six.jpg">
             <h3>
                 Subheader
@@ -201,7 +204,13 @@
                 </label>
                 <select id="option">
                     <option>
-                        Option
+                        Option 1
+                    </option>
+                    <option>
+                        Option 2
+                    </option>
+                    <option>
+                        Option 3
                     </option>
                 </select>
                 <textarea id="message" placeholder="write us a message..."></textarea>
@@ -297,7 +306,7 @@
                 <button>
                     <a href="https://www.linkedin.com/">
                         <img src="img/linkedin-footer.png">
-                    </a>
+                    </a>    
                 </button>
                 <button>
                     <a href="https://github.com/">
