--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap" rel="stylesheet">
         <title>
             Trackgenix SA
         </title>
@@ -149,7 +153,6 @@
                     Learn more
                 </a>
             </button>
-            <hr>
             <img src="img/content-image-four.jpg">
             <h3>
                 Subheader
@@ -163,7 +166,6 @@
                     Learn more
                 </a>
             </button>
-            <hr>
             <img src="img/content-image-five.jpg">
             <h3>
                 Subheader
@@ -177,7 +179,6 @@
                     Learn more
                 </a>
             </button>
-            <hr>
             <img src="img/content-image-six.jpg">
             <h3>
                 Subheader
