--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -9,302 +9,208 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap" rel="stylesheet">
-        <title>
-            Trackgenix SA
-        </title>
+        <title> Trackgenix SA </title>
     </head>
     <body>
         <header>
-            <h1>
-                Trackgenix SA
-            </h1>
+            <h1> Trackgenix SA </h1>
         </header>
         <nav>
             <form>
                 <input id= "search" type="text" placeholder="Search">
-                <button>
-                    Search
-                </button>
+                <button> Search </button>
             </form>
             <button>
-                <a href="#">
-                    LOG IN
-                </a>
+                <a href="#"> LOG IN </a>
             </button>
             <button>
-                <a href="#">
-                    SIGN UP
-                </a>
+                <a href="#"> SIGN UP </a>
             </button>
-            <p>
-                MENU
-            </p>
+            <p> MENU </p>
             <ul>
                 <li>
-                    <a href="#homepage">
-                        Homepage
-                    </a>
+                    <a href="#homepage"> Homepage </a>
                 </li>
                 <li>
-                    <a href="#features">
-                        Features
-                    </a>
+                    <a href="#features"> Features </a>
                 </li>
                 <li>
-                    <a href="#why-trackgenix">
-                        Why Trackgenix?
-                    </a>
+                    <a href="#why-trackgenix"> Why Trackgenix? </a>
                 </li>
                 <li>
-                    <a href="#contact-us">
-                        Contact Us
-                    </a>
+                    <a href="#contact-us"> Contact Us </a>
                 </li>
             </ul>
-            <p>
-                GET IN TOUCH
-            </p>
+            <p> GET IN TOUCH </p>
             <ul>
-                <li>
-                        mailinfo@trackgenix.com
-                </li>
+                <li> mailinfo@trackgenix.com </li>
                         123-456789
-                <li>
-                        123 fake road #2000 Rosario, Argentina
-                </li>
+                <li> 123 fake road #2000 Rosario, Argentina </li>
             </ul>
         </nav>
-        <section id="homepage">
-            <h2>
-                What is Trackgenix
-            </h2>
-            <p>
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
-                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
-                the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
-                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.
-            </p>
-            <img src="img/content-image-one.png">
-            <h2>
-                Our history
-            </h2>
-            <p>
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
-                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
-                the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
-                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.
-            </p>
-            <button>
-                <a href="#">
-                    Learn more
-                </a>
-            </button>
-            <img src="img/content-image-two.jpg">
-        </section>
-        <section id="features">
-            <h2>
-                Features
-            </h2>
-            <p>
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            </p>
-            <ul>
-                <li>
-                    Item 1:
-                    lorem ipsum is simply dummy text of the printin
-                </li>
-                <li>
-                    Item 2:
-                    lorem ipsum is simply dummy text of the printin
-                </li>
-                <li>
-                    Item 3:
-                    lorem ipsum is simply dummy text of the printin
-                </li>
-                <li>
-                    Item 4: 
-                    lorem ipsum is simply dummy text of the printin
-                </li>
-                <li>
-                    Item 5:
-                    lorem ipsum is simply dummy text of the printin
-                </li>
-            </ul>
-        </section>
-        <section id="why-trackgenix">
-            <h2>
-                WHY TRACKGENIX?
-            </h2>
-            <img src="img/content-image-three.png">
-            <h3>
-                Subheader
-            </h3>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                dummy text ever since the 1500s.
-            </p>
-            <button>
-                <a href="#">
-                    Learn more
-                </a>
-            </button>
-            <img src="img/content-image-four.jpg">
-            <h3>
-                Subheader
-            </h3>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                dummy text ever since the 1500s.
-            </p>
-            <button>
-                <a href="#">
-                    Learn more
-                </a>
-            </button>
-            <img src="img/content-image-five.jpg">
-            <h3>
-                Subheader
-            </h3>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                dummy text ever since the 1500s.
-            </p>
-            <button>
-                <a href="#">
-                    Learn more
-                </a>
-            </button>
-            <img src="img/content-image-six.jpg">
-            <h3>
-                Subheader
-            </h3>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                dummy text ever since the 1500s.
-            </p>
-            <button>
-                <a href="#">
-                    Learn more
-                </a>
-            </button>
-        </section>
-        <section id="contact-us">
-            <h2>
-                CONTACT US
-            </h2>
-            <form>
-                <label>
-                    Name
-                </label>
-                <input id= "name" type="text" placeholder="Insert your name">
-                <label>
-                    E-mail
-                </label>
-                <input id= "email" type="text" placeholder="Insert your email">
-                <label>
-                    Category
-                </label>
-                <select id="option">
-                    <option>
-                        Quality Assurance
-                    </option>
-                    <option>
-                        Developer
-                    </option>
-                    <option>
-                        Project Manager
-                    </option>
-                    <option>
-                        Human Resources
-                    </option>
-                </select>
-                <textarea id="message" placeholder="write us a message..."></textarea>
-                <input type="submit" value="Send message">
-                <input type="button" value="Reset">
-            </form>
+        <section class="main"> 
+            <section class="homepage">
+                <h2> What is Trackgenix </h2>
+                <p>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
+                    dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
+                    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
+                    been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to make a type specimen book.
+                </p>
+                <img src="img/content-image-one.png" class="image">
+                <h2> Our history </h2>
+                <p>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
+                    dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
+                    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
+                    been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to make a type specimen book.
+                </p>
+                <button>
+                    <a href="#"> Learn more </a>
+                </button>
+                <img src="img/content-image-two.jpg" class="image">
+            </section>
+            <section class="features">
+                <h2> Features </h2>
+                <p>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <ul>
+                    <li>
+                        Item 1:
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 2:
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 3:
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 4: 
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        Item 5:
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                </ul>
+            </section>
+            <section class="why-trackgenix">
+                <h2> WHY TRACKGENIX? </h2>
+                <img src="img/content-image-three.png" class="image">
+                <h3> Subheader </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                    dummy text ever since the 1500s.
+                </p>
+                <button>
+                    <a href="#"> Learn more </a>
+                </button>
+                <img src="img/content-image-four.jpg" class="image">
+                <h3> Subheader </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                    dummy text ever since the 1500s.
+                </p>
+                <button>
+                    <a href="#">
+                        Learn more
+                    </a>
+                </button>
+                <img src="img/content-image-five.jpg" class="image">
+                <h3>
+                    Subheader
+                </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                    dummy text ever since the 1500s.
+                </p>
+                <button>
+                    <a href="#"> Learn more </a>
+                </button>
+                <img src="img/content-image-six.jpg" class="image">
+                <h3> Subheader </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                    dummy text ever since the 1500s.
+                </p>
+                <button>
+                    <a href="#"> Learn more </a>
+                </button>
+            </section>
+            <section id="contact-us">
+                <h2> CONTACT US </h2>
+                <form>
+                    <label> Name </label>
+                    <input id= "name" type="text" placeholder="Insert your name">
+                    <label> E-mail </label>
+                    <input id= "email" type="text" placeholder="Insert your email">
+                    <label> Category </label>
+                    <select id="option">
+                        <option> Quality Assurance </option>
+                        <option> Developer </option>
+                        <option> Project Manager </option>
+                        <option> Human Resources </option>
+                    </select>
+                    <textarea id="message" placeholder="write us a message..."></textarea>
+                    <input type="submit" value="Send message">
+                    <input type="button" value="Reset">
+                </form>
+            </section>
         </section>
         <footer>
-            <h2>
-                TRACKGENIX
-            </h2>
-            <h4>
-                Products
-            </h4>
+            <h2> TRACKGENIX </h2>
+            <h4> Products </h4>
             <ol>
                 <li>
-                    <a href="#features">
-                        Features
-                    </a>
+                    <a href="#features"> Features </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Downloads
-                    </a>
+                    <a href="#"> Downloads </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Integrations
-                    </a>
+                    <a href="#"> Integrations </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Extras
-                    </a>
+                    <a href="#"> Extras </a>
                 </li>
             </ol>
-            <h4>
-                Company
-            </h4>
+            <h4> Company </h4>
             <ol>
                 <li>
-                    <a href="#homepage">
-                        About us
-                    </a>
+                    <a href="#homepage"> About us </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Clients
-                    </a>
+                    <a href="#"> Clients </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Resourses
-                    </a>
+                    <a href="#"> Resourses </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Blog
-                    </a>
+                    <a href="#"> Blog </a>
                 </li>
             </ol>
-            <h4>
-                Support
-            </h4>
+            <h4> Support </h4>
             <ol>
                 <li>
-                    <a href="#">
-                        Help
-                    </a>
+                    <a href="#"> Help </a>
                 </li>
                 <li>
-                    <a href="#">
-                        Tutorials
-                    </a>
+                    <a href="#"> Tutorials </a>
                 </li>
                 <li>
-                    <a href="#">
-                        API
-                    </a>
+                    <a href="#"> API </a>
                 </li>
                 <li>
-                    <a href="#contact-us">
-                        Contact
-                    </a>
+                    <a href="#contact-us"> Contact </a>
                 </li>
             </ol>
             <div id="social-media">
@@ -316,7 +222,7 @@
                 <button>
                     <a href="https://www.linkedin.com/">
                         <img src="img/linkedin-footer.png">
-                    </a>    
+                    </a>
                 </button>
                 <button>
                     <a href="https://github.com/">
