--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -8,7 +8,11 @@
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap" 
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <title> Trackgenix SA </title>
     </head>
     <body>
@@ -17,13 +21,19 @@
         </header>
         <nav>
             <form>
-                <input id= "search" type="text" placeholder="Search">
-                <button> Search </button>
+                <div class="container-1">
+                    <input id= "search" type="text" placeholder="Search">
+                    <span class="icon">
+                        <button type="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </span>
+                </div> 
             </form>
-            <button>
+            <button class="buttons-account">
                 <a href="#"> LOG IN </a>
             </button>
-            <button>
+            <button class="buttons-account">
                 <a href="#"> SIGN UP </a>
             </button>
             <p> MENU </p>
