BaSP-W03-2022: I fixed a big part of the nav

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -21,7 +21,7 @@
         </header>
         <nav>
             <form>
-                <div class="container-1">
+                <div class="container-search">
                     <input id= "search" type="text" placeholder="Search">
                     <span class="icon">
                         <button type="submit">
@@ -30,14 +30,14 @@
                     </span>
                 </div> 
             </form>
-            <button class="buttons-account">
+            <button class="buttons-account" id="log-in">
                 <a href="#"> LOG IN </a>
             </button>
-            <button class="buttons-account">
+            <button class="buttons-account" id="sign-up">
                 <a href="#"> SIGN UP </a>
             </button>
-            <p> MENU </p>
-            <ul>
+            <p class="menu"> MENU </p>
+            <ul class="sub-menu">
                 <li>
                     <a href="#homepage"> Homepage </a>
                 </li>
