--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -51,67 +51,85 @@
                     <a href="#contact-us"> Contact Us </a>
                 </li>
             </ul>
-            <p> GET IN TOUCH </p>
-            <ul>
-                <li> mailinfo@trackgenix.com </li>
-                        123-456789
-                <li> 123 fake road #2000 Rosario, Argentina </li>
-            </ul>
+            <div class="get-in-touch">
+                <p class="menu"> GET IN TOUCH </p>
+                <ul class="more-data">
+                    <li> mailinfo@trackgenix.com </li>
+                    <li> 123-456789 </li>
+                    <li> 123 fake road #2000 Rosario, Argentina </li>
+                </ul>
+            </div>  
         </nav>
         <section class="main"> 
             <section class="homepage">
-                <h2> What is Trackgenix </h2>
-                <p>
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
-                    dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
-                    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
-                    been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to make a type specimen book.
-                </p>
-                <img src="img/content-image-one.png" class="image">
-                <h2> Our history </h2>
-                <p>
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
-                    dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
-                    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
-                    been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to make a type specimen book.
-                </p>
-                <button>
-                    <a href="#"> Learn more </a>
-                </button>
-                <img src="img/content-image-two.jpg" class="image">
+                <div class="info-contain"> 
+                    <div class="first-contain">
+                        <div class="info-left"> 
+                            <h2> What is Trackgenix </h2>
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                                type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
+                                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
+                                the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
+                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                                scrambled it to make a type specimen book.
+                            </p>
+                        </div>
+                        <div class="first-image">
+                            <img src="img/content-image-one.png" class="image">
+                        </div>
+                    </div>
+                    <div class="second-contain">
+                        <div class="info-right"> 
+                            <h2> Our history </h2>
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                                type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
+                                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
+                                the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
+                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                                scrambled it to make a type specimen book.
+                            </p>
+                            <button>
+                                <a href="#"> Learn more </a>
+                            </button>
+                        </div>
+                        <div class="second-image"> 
+                            <img src="img/content-image-two.jpg" class="image">
+                        </div>
+                    </div>
+                </div>  
             </section>
             <section class="features">
-                <h2> Features </h2>
-                <p>
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </p>
-                <ul>
-                    <li>
-                        Item 1:
-                        lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        Item 2:
-                        lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        Item 3:
-                        lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        Item 4: 
-                        lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        Item 5:
-                        lorem ipsum is simply dummy text of the printin
-                    </li>
-                </ul>
+                <div class="features-content"> 
+                    <h2> Features </h2>
+                    <p>
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <ul>
+                        <li>
+                            Item 1:
+                            lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            Item 2:
+                            lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            Item 3:
+                            lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            Item 4: 
+                            lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            Item 5:
+                            lorem ipsum is simply dummy text of the printin
+                        </li>
+                    </ul>
+                </div>
             </section>
             <section class="why-trackgenix">
                 <h2> WHY TRACKGENIX? </h2>
