BaSP-W03-2022: Making style in all the images and titles

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -65,7 +65,7 @@
                 <div class="info-contain"> 
                     <div class="first-contain">
                         <div class="info-left"> 
-                            <h2> What is Trackgenix </h2>
+                            <h2 class="title"> What is Trackgenix </h2>
                             <p>
                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                                 type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
@@ -81,7 +81,7 @@
                     </div>
                     <div class="second-contain">
                         <div class="info-right"> 
-                            <h2> Our history </h2>
+                            <h2 class="title"> Our history </h2>
                             <p>
                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                                 type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
