BaSP-W03-2022: Making style in the paragraphs and images

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -66,7 +66,7 @@
                     <div class="first-contain">
                         <div class="info-left"> 
                             <h2 class="title"> What is Trackgenix </h2>
-                            <p>
+                            <p class="info-p">
                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                                 type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
                                 dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
@@ -76,13 +76,13 @@
                             </p>
                         </div>
                         <div class="first-image">
-                            <img src="img/content-image-one.png" class="image">
+                            <img src="img/content-image-one.png" class="image size-image-one">
                         </div>
                     </div>
                     <div class="second-contain">
                         <div class="info-right"> 
                             <h2 class="title"> Our history </h2>
-                            <p>
+                            <p class="info-p">
                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                                 type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
                                 dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
@@ -95,7 +95,7 @@
                             </button>
                         </div>
                         <div class="second-image"> 
-                            <img src="img/content-image-two.jpg" class="image">
+                            <img src="img/content-image-two.jpg" class="image size-image-two">
                         </div>
                     </div>
                 </div>  
@@ -103,7 +103,7 @@
             <section class="features">
                 <div class="features-content"> 
                     <h2> Features </h2>
-                    <p>
+                    <p class="info-p">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                         type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
@@ -135,7 +135,7 @@
                 <h2> WHY TRACKGENIX? </h2>
                 <img src="img/content-image-three.png" class="image">
                 <h3> Subheader </h3>
-                <p>
+                <p class="info-p">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                     dummy text ever since the 1500s.
                 </p>
@@ -144,7 +144,7 @@
                 </button>
                 <img src="img/content-image-four.jpg" class="image">
                 <h3> Subheader </h3>
-                <p>
+                <p class="info-p">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                     dummy text ever since the 1500s.
                 </p>
@@ -157,7 +157,7 @@
                 <h3>
                     Subheader
                 </h3>
-                <p>
+                <p class="info-p">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                     dummy text ever since the 1500s.
                 </p>
@@ -166,7 +166,7 @@
                 </button>
                 <img src="img/content-image-six.jpg" class="image">
                 <h3> Subheader </h3>
-                <p>
+                <p class="info-p">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                     dummy text ever since the 1500s.
                 </p>
