--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap" 
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <title> Trackgenix SA </title>
     </head>
@@ -28,7 +28,7 @@
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
                     </span>
-                </div> 
+                </div>
             </form>
             <button class="buttons-account" id="log-in">
                 <a href="#"> LOG IN </a>
@@ -58,13 +58,13 @@
                     <li> 123-456789 </li>
                     <li> 123 fake road #2000 Rosario, Argentina </li>
                 </ul>
-            </div>  
+            </div>
         </nav>
-        <section class="main"> 
+        <section class="main">
             <section class="homepage">
-                <div class="info-contain"> 
+                <div class="info-contain">
                     <div class="first-contain">
-                        <div class="info-left"> 
+                        <div class="info-left">
                             <h2 class="title"> What is Trackgenix </h2>
                             <p class="info-p">
                                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
@@ -80,28 +80,25 @@
                         </div>
                     </div>
                     <div class="second-contain">
-                        <div class="info-right"> 
+                        <div class="info-right">
                             <h2 class="title"> Our history </h2>
                             <p class="info-p">
-                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                                type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
-                                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
-                                the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
-                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                                scrambled it to make a type specimen book.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                                dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                                specimen book.
                             </p>
-                            <button>
+                            <button id="first-learn-button">
                                 <a href="#"> Learn more </a>
                             </button>
                         </div>
-                        <div class="second-image"> 
+                        <div class="second-image">
                             <img src="img/content-image-two.jpg" class="image size-image-two">
                         </div>
                     </div>
-                </div>  
+                </div>
             </section>
             <section class="features">
-                <div class="features-content"> 
+                <div class="features-content">
                     <h2> Features </h2>
                     <p class="info-p">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
