BaSP-W03-2022: Details of the form contact-us

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -100,29 +100,29 @@
             <section class="features">
                 <div class="features-content">
                     <h2 class="titles-content"> Features </h2>
-                    <p class="info-p">
+                    <p class="info-p feature-p">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                         type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                     <ul>
                         <li>
-                            Item 1:
+                            <span id= "item">Item 1:</span>
                             lorem ipsum is simply dummy text of the printin
                         </li>
                         <li>
-                            Item 2:
+                            <span id= "item">Item 2:</span>
                             lorem ipsum is simply dummy text of the printin
                         </li>
                         <li>
-                            Item 3:
+                            <span id= "item">Item 3:</span>
                             lorem ipsum is simply dummy text of the printin
                         </li>
                         <li>
-                            Item 4: 
+                            <span id= "item">Item 4:</span>
                             lorem ipsum is simply dummy text of the printin
                         </li>
                         <li>
-                            Item 5:
+                            <span id= "item">Item 5:</span>
                             lorem ipsum is simply dummy text of the printin
                         </li>
                     </ul>
@@ -130,46 +130,68 @@
             </section>
             <section class="why-trackgenix">
                 <h2 class="titles-content"> WHY TRACKGENIX? </h2>
-                <img src="img/content-image-three.png" class="image">
-                <h3> Subheader </h3>
-                <p class="info-p">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                    dummy text ever since the 1500s.
-                </p>
-                <button>
-                    <a href="#"> Learn more </a>
-                </button>
-                <img src="img/content-image-four.jpg" class="image">
-                <h3> Subheader </h3>
-                <p class="info-p">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                    dummy text ever since the 1500s.
-                </p>
-                <button>
-                    <a href="#">
-                        Learn more
-                    </a>
-                </button>
-                <img src="img/content-image-five.jpg" class="image">
-                <h3>
-                    Subheader
-                </h3>
-                <p class="info-p">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                    dummy text ever since the 1500s.
-                </p>
-                <button>
-                    <a href="#"> Learn more </a>
-                </button>
-                <img src="img/content-image-six.jpg" class="image">
-                <h3> Subheader </h3>
-                <p class="info-p">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                    dummy text ever since the 1500s.
-                </p>
-                <button>
-                    <a href="#"> Learn more </a>
-                </button>
+                <div class="contain-one">
+                <div class="image-left-one"> 
+                        <img src="img/content-image-three.png" class="image size-image-two">
+                    </div>
+                    <div class="content-right-one"> 
+                            <h3 class="subheader"> Subheader </h3>
+                            <p class="info-p">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                                dummy text ever since the 1500s.
+                            </p>
+                            <button class="learn-more-buttons">
+                                <a href="#"> Learn more </a>
+                            </button>
+                    </div>
+                </div>
+                <div class="contain-one">
+                    <div class="image-right-two">
+                        <img src="img/content-image-four.jpg" class="image size-image-two">
+                    </div>
+                    <div class="content-left-two">
+                        <h3 class="subheader"> Subheader </h3>
+                        <p class="info-p">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                            dummy text ever since the 1500s.
+                        </p>
+                        <button class="learn-more-buttons">
+                            <a href="#">
+                                Learn more
+                            </a>
+                        </button>
+                    </div>
+                </div>  
+                    <div class="contain-one">
+                    <div class="image-left-one">
+                        <img src="img/content-image-five.jpg" class="image size-image-two">
+                    </div>
+                    <div class="content-right-one">
+                        <h3 class="subheader"> Subheader </h3>
+                        <p class="info-p">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                            dummy text ever since the 1500s.
+                        </p>
+                        <button class="learn-more-buttons">
+                            <a href="#"> Learn more </a>
+                        </button>
+                    </div>
+                </div>
+                <div class="contain-one"> 
+                    <div class="image-right-two">
+                        <img src="img/content-image-six.jpg" class="image size-image-two">
+                    </div>
+                    <div class="content-left-two">
+                        <h3 class="subheader"> Subheader </h3>
+                        <p class="info-p">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                            dummy text ever since the 1500s.
+                        </p>
+                        <button class="learn-more-buttons">
+                            <a href="#"> Learn more </a>
+                        </button>
+                    </div>
+                </div>
             </section>
             <section id="contact-us">
                 <h2 class="titles-content"> CONTACT US </h2>
